Changed the View color background

--- a/GitHubClone/GitHubClone/Base.lproj/Main.storyboard
+++ b/GitHubClone/GitHubClone/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.614100547793343" blue="0.50454625603106229" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Wy9-ch-gcI" secondAttribute="trailing" constant="20" id="0vP-5O-d1I"/>
                             <constraint firstItem="Wy9-ch-gcI" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="9Lf-lI-BAx"/>
