Got the Repositories to display on the page

--- a/GitHubClone/GitHubClone/Base.lproj/Main.storyboard
+++ b/GitHubClone/GitHubClone/Base.lproj/Main.storyboard
@@ -100,13 +100,28 @@
                                 <rect key="frame" x="0.0" y="72" width="375" height="595"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="repoCell" id="LFY-js-mnV">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="repoCell" id="LFY-js-mnV" customClass="RepoTableViewCell" customModule="GitHubClone" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LFY-js-mnV" id="FJn-2G-wzT">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OwQ-6g-qKr">
+                                                    <rect key="frame" x="8" y="11.5" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="OwQ-6g-qKr" firstAttribute="centerY" secondItem="FJn-2G-wzT" secondAttribute="centerY" id="T3U-g7-BtE"/>
+                                                <constraint firstItem="OwQ-6g-qKr" firstAttribute="leading" secondItem="FJn-2G-wzT" secondAttribute="leading" constant="8" id="lqT-2y-ydS"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="repoNameLabel" destination="OwQ-6g-qKr" id="8Y5-FI-2q9"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
